# llm-linear-algebra-solver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  dataset.json  dataset_info.py  dataset_stats.txt
scripts/: gen50.py  metrics.py  run_baseline_llama3.py  run_baseline_llama4.py
src/equation/: __init__.py  eigen_problem.py
src/prompts/baseline/: __init__.py  registry.py  v1.py  v2.py  v3.py
