[project]
name = "llm-linear-algebra-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120
