[project]
name = "llm-linear-algebra-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.0.1",
    "groq>=1.2.0",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
